[package]
name = "ttc"
version = "0.1.0"
edition = "2021"
description = "common terminal tools commands"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
text-colorizer = "1"
chrono = "0.4"
qrcode = "0.12.0"
image = { version = "0.24.7"}
ansi_term = "0.12"
